correcting css alignment issues

--- a/layouts/style.css
+++ b/layouts/style.css
@@ -52,7 +52,6 @@ h3 {
 
 a {
   cursor: pointer !important;
-  cursor: hand;
 }
 
 .small-text {
